# ai-dev-brain-kit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EULA.md  LICENSE  README.md  SECURITY.md  brain.spec  pyproject.toml
.github/DISCUSSIONS/: category-labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
brain/: __main__.py  cli.py  config.py  provider.py
brain/commands/: capture.py  consolidate.py  context.py  doctor.py  feedback.py  handoff.py  hook.py  init.py  review.py
docs/: CUSTOMER_HANDBOOK.md  PRIVACY.md  QUICKSTART.md  REMOTE_INSTALL.md  SECURITY.md  SECURITY_AUDIT.md  UNINSTALL.md
releases/: brain-linux-x86_64.sha256  brain-windows-x86_64.sha256
releases/pilot-zip/: README.txt
scripts/: brain.spec  build-nuitka.sh  build-windows.sh  build.sh  install.ps1  install.sh  run_pyinstaller.py  setup-wine-build.sh
template-vault/_templates/: daily.md  decision.md  project.md  prompt.md  session.md
tests/: test_capture.py  test_config.py  test_consolidate.py  test_context.py  test_doctor.py  test_feedback.py  test_handoff.py  test_hook.py  test_init.py  test_install.py  test_provider.py  test_review.py
