[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-dev-brain"
version = "0.1.0"
description = "Local AI memory system for solo developers"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
brain = "brain.cli:main"

[tool.setuptools.packages.find]
include = ["brain*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
